# aeson-inflections

./: aeson-inflections.cabal
src/Data/Aeson/: Inflections.hs
src/Data/Aeson/Inflections/: Generic.hs
