cabal-version:       2.4
name:                aeson-inflections
version:             0.1.0.0
synopsis:            Collection of useful functions for aeson instances and stuff
author:              Author name here
maintainer:          example@example.com
license-file:        LICENSE
category:            Web
build-type:          Simple

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Aeson.Inflections
                     , Data.Aeson.Inflections.Generic
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , deriving-aeson
                     , inflections
                     , lens
                     , megaparsec
                     , template-haskell
                     , text
  default-extensions:  DataKinds
  default-language:    Haskell2010
